Fix: fix cutoff margin in index

--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 
 .column {
   float: left;
-  width: 33.33%;
+  width: 32.25%;
   padding: 5px;
+  margin: 10px;
 }
 .column img {
 	width: 95%;
@@ -31,7 +32,7 @@
 .checklist-row {
 	padding: 5px;
 	display: inline-block;
-	width: 45%;
+	width: 50%;
 	
 }
 
@@ -54,3 +55,4 @@
 	max-width: 100%;
 	height: auto;
 }
+
